--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ deploy:
   provider: npm
   email: david.beale@bealearts.co.uk
   api_key:
-    secure: Z0LvijaKnCrFCcoabbY1EV3TtqcRvhXf1OVfmMgn0FOrNz+XCYV2jc7KnQxcDCRrwwLA6QNrArSNDAmjtOUCPswigy+Qw45mMWG51R9BL3AzJ+CiOwNRCKUCUQiqRFkQAgLrCT5kEc6VGzHcZ06L19d5D6431a9bnVpNDqT1V4M=
+    secure: kOkPruNaipAoPdoojPiRjaJ7iRYbWaYrvlJ1ZWtICFxX7JuwINZQzN5EKjeOdRLjh05WRocy2KwTXZ5TvPjNx6KTBe6p2Ut/NnDmW3XdklyrSSSEJ95c+G6XpcNNItNrnEmI4PHLa5lfIrEL1PuP0NLegksd+9ElgUpTDuxsaeY=
   on:
     all_branches: true
     tags: true
-    repo: bealearts/grunt-periodic
+    repo: bealearts/propertiesify
